[gd_scene load_steps=10 format=3 uid="uid://ssyc2uuwcivf"]

[ext_resource type="Script" uid="uid://dq7gyiquijmod" path="res://scripts/enemy/enhanced_nextbot.gd" id="1_a5qvw"]
[ext_resource type="Script" uid="uid://tk5o4frhjr0r" path="res://scripts/enemy/components/enhanced_body_component.gd" id="2_4wa1p"]
[ext_resource type="Shader" uid="uid://b3ejot0nxeca6" path="res://materials/wireframe.gdshader" id="2_sbklw"]
[ext_resource type="Script" uid="uid://ddjnmtuqj0gcp" path="res://scripts/enemy/components/enhanced_vision_component.gd" id="3_sbklw"]
[ext_resource type="Script" uid="uid://b25xakfpo3en4" path="res://scripts/enemy/components/enhanced_intention_component.gd" id="4_hossy"]
[ext_resource type="Script" uid="uid://b6vr08sktnmgn" path="res://scripts/enemy/components/enhanced_locomotion_component.gd" id="5_ex6ea"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hossy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ex6ea"]
render_priority = 0
shader = ExtResource("2_sbklw")
shader_parameter/modelColor = Color(0.621094, 0.29599, 0.29599, 1)
shader_parameter/wireframeColor = Color(0.789063, 0.545563, 0.545563, 1)
shader_parameter/width = 10.799
shader_parameter/modelOpacity = 0.648
shader_parameter/filtered = true

[sub_resource type="BoxMesh" id="BoxMesh_nsneu"]
material = SubResource("ShaderMaterial_ex6ea")
size = Vector3(1, 2.07, 1)

[node name="nextbot" type="CharacterBody3D"]
script = ExtResource("1_a5qvw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_hossy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_nsneu")
skeleton = NodePath("../CollisionShape3D")

[node name="Components" type="Node" parent="."]

[node name="EnhancedBodyComponent" type="Node" parent="Components"]
script = ExtResource("2_4wa1p")

[node name="EnhancedVisionComponent" type="Node" parent="Components"]
script = ExtResource("3_sbklw")

[node name="EnhancedIntentionComponent" type="Node" parent="Components"]
script = ExtResource("4_hossy")

[node name="EnhancedLocomotionComponent" type="Node" parent="Components"]
script = ExtResource("5_ex6ea")
